--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="tokens-section">
         <div class="stat-card total-tokens-card">
           <div class="stat-info">
-            <h4>Total Tokens Used</h4>
+            <h3>Total Tokens Used</h3>
             <div class="stat-value" id="totalTokens">0</div>
             <div class="stat-subtext">Across all departments</div>
           </div>
@@ -165,6 +165,246 @@
             </thead>
             <tbody>
               <tr>
+                <td>R0030</td>
+                <td>Annual Budget Review 2025</td>
+                <td>11/15/2025 9:00 AM</td>
+                <td>11/20/2025 3:45 PM</td>
+                <td>1523</td>
+                <td>12/31/2025</td>
+                <td>\Finance\Budget\2025</td>
+                <td><span class="status-badge inprogress">In Progress</span></td>
+              </tr>
+              <tr>
+                <td>R0029</td>
+                <td>Q4 Sales Report</td>
+                <td>11/10/2025 2:15 PM</td>
+                <td>11/18/2025 10:20 AM</td>
+                <td>892</td>
+                <td>12/15/2025</td>
+                <td>\Sales\Reports\Q4</td>
+                <td><span class="status-badge approve">Approve</span></td>
+              </tr>
+              <tr>
+                <td>R0028</td>
+                <td>Employee Training Program</td>
+                <td>11/5/2025 8:30 AM</td>
+                <td>11/19/2025 4:00 PM</td>
+                <td>2341</td>
+                <td></td>
+                <td>\HR\Training\2025</td>
+                <td><span class="status-badge complete">Complete</span></td>
+              </tr>
+              <tr>
+                <td>R0027</td>
+                <td>IT Infrastructure Upgrade</td>
+                <td>11/1/2025 10:00 AM</td>
+                <td>11/17/2025 2:30 PM</td>
+                <td>4567</td>
+                <td>01/31/2026</td>
+                <td>\IT\Projects\Infrastructure</td>
+                <td><span class="status-badge inprogress">In Progress</span></td>
+              </tr>
+              <tr>
+                <td>R0026</td>
+                <td>Marketing Campaign Analysis</td>
+                <td>10/28/2025 1:45 PM</td>
+                <td>11/16/2025 11:15 AM</td>
+                <td>678</td>
+                <td></td>
+                <td>\Marketing\Campaigns\Fall2025</td>
+                <td><span class="status-badge approve">Approve</span></td>
+              </tr>
+              <tr>
+                <td>R0025</td>
+                <td>Client Feedback Survey</td>
+                <td>10/22/2025 3:20 PM</td>
+                <td>11/14/2025 9:50 AM</td>
+                <td>1234</td>
+                <td>11/30/2025</td>
+                <td>\Operations\Surveys\Q4</td>
+                <td><span class="status-badge complete">Complete</span></td>
+              </tr>
+              <tr>
+                <td>R0024</td>
+                <td>Security Audit Report</td>
+                <td>10/18/2025 11:00 AM</td>
+                <td>11/12/2025 4:30 PM</td>
+                <td>3456</td>
+                <td></td>
+                <td>\IT\Security\Audits</td>
+                <td><span class="status-badge pending">Pending</span></td>
+              </tr>
+              <tr>
+                <td>R0023</td>
+                <td>Product Launch Strategy</td>
+                <td>10/15/2025 9:15 AM</td>
+                <td>11/10/2025 1:20 PM</td>
+                <td>2890</td>
+                <td>12/20/2025</td>
+                <td>\Marketing\Products\NewLaunch</td>
+                <td><span class="status-badge inprogress">In Progress</span></td>
+              </tr>
+              <tr>
+                <td>R0022</td>
+                <td>Vendor Contract Review</td>
+                <td>10/12/2025 2:40 PM</td>
+                <td>11/8/2025 10:15 AM</td>
+                <td>1567</td>
+                <td></td>
+                <td>\Legal\Contracts\Vendors</td>
+                <td><span class="status-badge approve">Approve</span></td>
+              </tr>
+              <tr>
+                <td>R0021</td>
+                <td>Quarterly Financial Statement</td>
+                <td>10/8/2025 8:00 AM</td>
+                <td>11/5/2025 3:45 PM</td>
+                <td>987</td>
+                <td>11/15/2025</td>
+                <td>\Finance\Statements\Q3</td>
+                <td><span class="status-badge complete">Complete</span></td>
+              </tr>
+              <tr>
+                <td>R0020</td>
+                <td>Customer Service Guidelines</td>
+                <td>10/5/2025 10:30 AM</td>
+                <td>11/2/2025 2:10 PM</td>
+                <td>2123</td>
+                <td></td>
+                <td>\Operations\CS\Guidelines</td>
+                <td><span class="status-badge approve">Approve</span></td>
+              </tr>
+              <tr>
+                <td>R0019</td>
+                <td>Data Migration Project</td>
+                <td>10/1/2025 1:15 PM</td>
+                <td>10/30/2025 4:50 PM</td>
+                <td>5678</td>
+                <td>12/31/2025</td>
+                <td>\IT\Projects\DataMigration</td>
+                <td><span class="status-badge inprogress">In Progress</span></td>
+              </tr>
+              <tr>
+                <td>R0018</td>
+                <td>Employee Benefits Review</td>
+                <td>9/28/2025 9:45 AM</td>
+                <td>10/28/2025 11:30 AM</td>
+                <td>1890</td>
+                <td></td>
+                <td>\HR\Benefits\2025</td>
+                <td><span class="status-badge complete">Complete</span></td>
+              </tr>
+              <tr>
+                <td>R0017</td>
+                <td>Compliance Audit Documentation</td>
+                <td>9/25/2025 3:00 PM</td>
+                <td>10/25/2025 1:45 PM</td>
+                <td>3234</td>
+                <td>11/30/2025</td>
+                <td>\Legal\Compliance\Audits</td>
+                <td><span class="status-badge pending">Pending</span></td>
+              </tr>
+              <tr>
+                <td>R0016</td>
+                <td>Social Media Strategy Plan</td>
+                <td>9/20/2025 11:20 AM</td>
+                <td>10/22/2025 3:15 PM</td>
+                <td>1456</td>
+                <td></td>
+                <td>\Marketing\SocialMedia\2025</td>
+                <td><span class="status-badge approve">Approve</span></td>
+              </tr>
+              <tr>
+                <td>R0015</td>
+                <td>Office Renovation Proposal</td>
+                <td>9/18/2025 8:30 AM</td>
+                <td>10/20/2025 5:00 PM</td>
+                <td>4321</td>
+                <td>01/15/2026</td>
+                <td>\Operations\Facilities\Renovation</td>
+                <td><span class="status-badge inprogress">In Progress</span></td>
+              </tr>
+              <tr>
+                <td>R0014</td>
+                <td>Supplier Evaluation Report</td>
+                <td>9/15/2025 2:10 PM</td>
+                <td>10/18/2025 10:40 AM</td>
+                <td>2567</td>
+                <td></td>
+                <td>\Procurement\Suppliers\Eval</td>
+                <td><span class="status-badge complete">Complete</span></td>
+              </tr>
+              <tr>
+                <td>R0013</td>
+                <td>Risk Assessment Analysis</td>
+                <td>9/12/2025 10:00 AM</td>
+                <td>10/15/2025 2:30 PM</td>
+                <td>1789</td>
+                <td>11/30/2025</td>
+                <td>\Finance\Risk\Assessment</td>
+                <td><span class="status-badge approve">Approve</span></td>
+              </tr>
+              <tr>
+                <td>R0012</td>
+                <td>Performance Review Template</td>
+                <td>9/8/2025 1:30 PM</td>
+                <td>10/12/2025 4:20 PM</td>
+                <td>892</td>
+                <td></td>
+                <td>\HR\Performance\Templates</td>
+                <td><span class="status-badge complete">Complete</span></td>
+              </tr>
+              <tr>
+                <td>R0011</td>
+                <td>Network Security Update</td>
+                <td>9/5/2025 9:00 AM</td>
+                <td>10/10/2025 11:45 AM</td>
+                <td>3678</td>
+                <td>12/15/2025</td>
+                <td>\IT\Security\NetworkUpdate</td>
+                <td><span class="status-badge inprogress">In Progress</span></td>
+              </tr>
+              <tr>
+                <td>R0010</td>
+                <td>Brand Identity Guidelines</td>
+                <td>9/1/2025 3:45 PM</td>
+                <td>10/8/2025 1:10 PM</td>
+                <td>1234</td>
+                <td></td>
+                <td>\Marketing\Brand\Guidelines</td>
+                <td><span class="status-badge approve">Approve</span></td>
+              </tr>
+              <tr>
+                <td>R0009</td>
+                <td>Customer Retention Strategy</td>
+                <td>8/28/2025 10:15 AM</td>
+                <td>10/5/2025 3:30 PM</td>
+                <td>2456</td>
+                <td>11/30/2025</td>
+                <td>\Sales\Strategy\Retention</td>
+                <td><span class="status-badge pending">Pending</span></td>
+              </tr>
+              <tr>
+                <td>R0008</td>
+                <td>Training Module Development</td>
+                <td>8/25/2025 2:00 PM</td>
+                <td>10/2/2025 5:15 PM</td>
+                <td>3123</td>
+                <td></td>
+                <td>\HR\Training\Modules</td>
+                <td><span class="status-badge complete">Complete</span></td>
+              </tr>
+              <tr>
+                <td>R0007</td>
+                <td>Budget Allocation Plan</td>
+                <td>8/20/2025 11:30 AM</td>
+                <td>9/30/2025 2:45 PM</td>
+                <td>1987</td>
+                <td>10/31/2025</td>
+                <td>\Finance\Budget\Allocation</td>
+                <td><span class="status-badge approve">Approve</span></td>
+              </tr>
+              <tr>
                 <td>R0006</td>
                 <td>VC507 Continued Tarbell C...</td>
                 <td>10/2/2025 2:30 PM</td>
@@ -270,5 +510,6 @@
   </div>
 
   <script src="./script.js"></script>
+  <script src="./pagination.js"></script>
 </body>
 </html>
