--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Dashboard - Ricoh AI</title>
+  <title>Ricoh AI</title>
   <link rel="stylesheet" href="./styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
@@ -35,7 +35,6 @@
 
       <div class="menu-section">Manage</div>
       <ul class="menu">
-        <li>Records Management</li>
         <li>OCR Documents</li>
         <li>Knowledge Base</li>
         <li>Reporting</li>
@@ -66,7 +65,6 @@
         <div class="department-tokens-container">
           <h3>Token Usage by Department</h3>
           <div class="department-tokens-grid" id="departmentTokensGrid">
-            <!-- Department cards will be generated here -->
           </div>
         </div>
       </section>
@@ -505,6 +503,7 @@
   <div class="chart-modal" id="chartModal">
     <div class="modal-content">
       <button class="modal-close" id="modalClose">×</button>
+      <h2 class="modal-chart-title" id="modalChartTitle"></h2>
       <div class="modal-chart-wrap" id="modalChartWrap"></div>
     </div>
   </div>
