--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="menu-section">Manage</div>
       <ul class="menu">
         <li>OCR Documents</li>
-        <li>Knowledge Base</li>
+        <li onclick="window.location.href='Knowledge_Bases.html'" style="cursor: pointer;">Knowledge Base</li>
         <li>Reporting</li>
       </ul>
 
@@ -47,7 +47,7 @@
         <h1>Dashboard</h1>
         <div class="date-filter">
           <label>Date:</label>
-          <input type="date" id="dateFrom" value="2022-01-01" />
+          <input type="date" id="dateFrom" value="2023-01-01" />
           <span class="date-separator">→</span>
           <input type="date" id="dateTo" value="2025-12-31" />
           <button class="btn-filter" id="applyDateFilter">Apply</button>
