Ver 1.8 (updated total tokens size)

--- a/AI Chat.html
+++ b/AI Chat.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AI Chat - Ricoh</title>
   <link rel="stylesheet" href="./styles.css" />
-  <link rel="stylesheet" href="./ai-chat.css" />
-</head>
+  <link rel="stylesheet" href="./ai-chat.css" />  <link rel="stylesheet" href="./dark-mode.css" /></head>
 <body>
 
   <header class="header">
@@ -18,6 +17,9 @@
       <button class="active">AI Chat</button>
       <button>Configuration</button>
     </nav>
+    <button class="theme-toggle" id="themeToggle" onclick="toggleDarkMode()" title="Toggle Dark Mode">
+      <span class="theme-icon">🌙</span>
+    </button>
     <div class="user-menu">sysadmin</div>
   </header>
 
