--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Ricoh AI</title>
   <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./dark-mode.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
 </head>
@@ -18,6 +19,9 @@
       <button onclick="window.location.href='AI Chat.html'">AI Chat</button>
       <button>Configuration</button>
     </nav>
+    <button class="theme-toggle" id="themeToggle" onclick="toggleDarkMode()" title="Toggle Dark Mode">
+      <span class="theme-icon">🌙</span>
+    </button>
     <div class="user-menu">sysadmin</div>
   </header>
 
