Ver 2.3 (added OCR function)

--- a/AI Chat.html
+++ b/AI Chat.html
@@ -30,6 +30,7 @@
       </div>
       
       <button class="nav-btn active">AI Chat</button>
+     <button class="nav-btn" onclick="window.location.href='ocr.html'">OCR</button>
       <button class="nav-btn">Configuration</button>
     </nav>
     
@@ -51,7 +52,7 @@
         <div class="chat-actions">
           <button class="btn-secondary" onclick="clearChat()">Clear Chat</button>
           <button class="btn-secondary" onclick="exportChat()">Export</button>
-          <label>Powered by Ricoh Hong Kong Limited </label> 
+          Powered by Ricoh Hong Kong Limited
         </div>
       </div>
       <div class="chat-messages" id="chatMessages">
