--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </div>
       
       <button class="nav-btn" onclick="window.location.href='AI Chat.html'">AI Chat</button>
+      <button class="nav-btn" onclick="window.location.href='ocr.html'">OCR</button>
       <button class="nav-btn">Configuration</button>
     </nav>
     
