Ver 2.4 (remove the margin-top)

--- a/Knowledge_Bases.html
+++ b/Knowledge_Bases.html
@@ -31,6 +31,7 @@
       </div>
       
       <button class="nav-btn" onclick="window.location.href='AI Chat.html'">AI Chat</button>
+      <button class="nav-btn" onclick="window.location.href='ocr.html'">OCR</button>
       <button class="nav-btn">Configuration</button>
     </nav>
     
