--- a/ocr.html
+++ b/ocr.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="dark-mode.css">
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4/dist/tesseract.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <body>
     <header class="header">
@@ -49,21 +51,38 @@
 
     <div class="ocr-container">
         <div class="ocr-left-panel">
-            <div class="upload-section">
-                <h2>Upload Document</h2>
+            <div class="doc-grid" id="docGrid">
+                <h2>OCR Documents</h2>
                 
-                <div class="file-upload-area" id="fileUploadArea">
-                    <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                <div class="file-upload-area" id="uploadArea">
+                    <input type="file" id="fileInput" accept="image/*,.pdf" multiple style="display: none;">
+                    <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                         <polyline points="17 8 12 3 7 8"></polyline>
                         <line x1="12" y1="3" x2="12" y2="15"></line>
                     </svg>
-                    <p>Click to upload or drag and drop</p>
+                    <p style="font-size: 1.1rem; font-weight: 600;">Upload Files</p>
+                    <p>Drag and drop files or click to upload</p>
                     <p class="file-types">Supported: JPG, PNG, PDF</p>
-                    <input type="file" id="fileInput" accept="image/*,.pdf" multiple hidden>
                 </div>
 
-                <div class="uploaded-files" id="uploadedFiles">
+                <div class="document-cards-grid" id="documentCardsGrid">
+                </div>
+
+                <div class="pagination-controls" id="paginationControls" style="display: none;">
+                    <button class="pagination-btn" id="prevPage" disabled>
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <polyline points="15 18 9 12 15 6"></polyline>
+                        </svg>
+                        Previous
+                    </button>
+                    <span class="page-info" id="pageInfo">Page 1 of 1</span>
+                    <button class="pagination-btn" id="nextPage" disabled>
+                        Next
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <polyline points="9 18 15 12 9 6"></polyline>
+                        </svg>
+                    </button>
                 </div>
 
                 <button class="scan-button" id="scanButton" disabled>
@@ -90,7 +109,7 @@
             <div class="preview-header">
                 <h2>Preview & Edit</h2>
                 <div class="preview-controls">
-                    <button class="control-button" id="zoomInButton">
+                    <button class="control-button" id="zoomInButton" title="Zoom In">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                             <circle cx="11" cy="11" r="8"></circle>
                             <path d="M21 21l-4.35-4.35"></path>
@@ -98,14 +117,14 @@
                             <line x1="8" y1="11" x2="14" y2="11"></line>
                         </svg>
                     </button>
-                    <button class="control-button" id="zoomOutButton">
+                    <button class="control-button" id="zoomOutButton" title="Zoom Out">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                             <circle cx="11" cy="11" r="8"></circle>
                             <path d="M21 21l-4.35-4.35"></path>
                             <line x1="8" y1="11" x2="14" y2="11"></line>
                         </svg>
                     </button>
-                    <button class="control-button" id="resetButton">Reset</button>
+                    <button class="control-button" id="resetButton" title="Reset">Reset</button>
                 </div>
             </div>
 
@@ -116,8 +135,8 @@
                         <circle cx="8.5" cy="8.5" r="1.5"></circle>
                         <polyline points="21 15 16 10 5 21"></polyline>
                     </svg>
-                    <p>No document scanned yet</p>
-                    <p class="hint">Upload a file and click Scan to begin</p>
+                    <p>No scanned documents yet</p>
+                    <p class="hint">Upload files and click Scan to start</p>
                 </div>
 
                 <div class="preview-content" id="previewContent" style="display: none;">
@@ -133,8 +152,26 @@
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                         <polyline points="20 6 9 17 4 12"></polyline>
                     </svg>
-                    Apply & Save
+                    Apply
                 </button>
+                <div class="download-options" id="downloadOptions" style="display: none;">
+                    <button class="download-btn" id="downloadPDF">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                            <polyline points="7 10 12 15 17 10"></polyline>
+                            <line x1="12" y1="15" x2="12" y2="3"></line>
+                        </svg>
+                        Download PDF
+                    </button>
+                    <button class="download-btn" id="downloadPNG">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                            <polyline points="7 10 12 15 17 10"></polyline>
+                            <line x1="12" y1="15" x2="12" y2="3"></line>
+                        </svg>
+                        Download PNG
+                    </button>
+                </div>
                 <button class="clear-button" id="clearButton">Clear</button>
             </div>
         </div>
