--- a/ocr.html
+++ b/ocr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,135 +49,72 @@
         <div class="user-menu">sysadmin</div>
     </header>
 
-    <div class="ocr-container">
-        <div class="ocr-left-panel">
-            <div class="doc-grid" id="docGrid">
-                <h2>OCR Documents</h2>
+    <main class="main-content">
+        <div class="ocr-container">
+            <!-- Left Panel - Image Upload and Display -->
+            <div class="left-panel">
+                <div class="upload-section">
+                    <input type="file" id="imageUpload" accept="image/*,application/pdf" multiple style="display: none;">
+                    <button class="upload-btn" onclick="document.getElementById('imageUpload').click()">
+                        <span>📁</span> Upload Image/PDF
+                    </button>
+                </div>
                 
-                <div class="file-upload-area" id="uploadArea">
-                    <input type="file" id="fileInput" accept="image/*,.pdf" multiple style="display: none;">
-                    <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                        <polyline points="17 8 12 3 7 8"></polyline>
-                        <line x1="12" y1="3" x2="12" y2="15"></line>
-                    </svg>
-                    <p style="font-size: 1.1rem; font-weight: 600;">Upload Files</p>
-                    <p>Drag and drop files or click to upload</p>
-                    <p class="file-types">Supported: JPG, PNG, PDF</p>
+                <div class="image-cards" id="imageCards">
+                    <!-- Image cards will be dynamically added here -->
                 </div>
+            </div>
 
-                <div class="document-cards-grid" id="documentCardsGrid">
-                </div>
-
-                <div class="pagination-controls" id="paginationControls" style="display: none;">
-                    <button class="pagination-btn" id="prevPage" disabled>
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <polyline points="15 18 9 12 15 6"></polyline>
-                        </svg>
-                        Previous
+            <!-- Right Panel - OCR Result and Editing -->
+            <div class="right-panel">
+                <div class="toolbar">
+                    <button class="tool-btn" id="zoomIn" title="Zoom In">
+                        <span>🔍+</span>
                     </button>
-                    <span class="page-info" id="pageInfo">Page 1 of 1</span>
-                    <button class="pagination-btn" id="nextPage" disabled>
-                        Next
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <polyline points="9 18 15 12 9 6"></polyline>
-                        </svg>
+                    <button class="tool-btn" id="zoomOut" title="Zoom Out">
+                        <span>🔍-</span>
+                    </button>
+                    <button class="tool-btn" id="rotateLeft" title="Rotate Left">
+                        <span>↺</span>
+                    </button>
+                    <button class="tool-btn" id="rotateRight" title="Rotate Right">
+                        <span>↻</span>
+                    </button>
+                    <button class="tool-btn" id="moveMode" title="Move Canvas">
+                        <span>✋</span>
+                    </button>
+                    <button class="tool-btn" id="addTextBox" title="Add Textbox">
+                        Textbox
+                    </button>
+                    <button class="tool-btn download-btn" id="applyBtn" title="Apply and Download">
+                        Apply
                     </button>
                 </div>
 
-                <button class="scan-button" id="scanButton" disabled>
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                        <path d="M3 7V5a2 2 0 0 1 2-2h2"></path>
-                        <path d="M17 3h2a2 2 0 0 1 2 2v2"></path>
-                        <path d="M21 17v2a2 2 0 0 1-2 2h-2"></path>
-                        <path d="M7 21H5a2 2 0 0 1-2-2v-2"></path>
-                        <rect x="7" y="7" width="10" height="10"></rect>
-                    </svg>
-                    Scan
-                </button>
-
-                <div class="scan-progress" id="scanProgress" style="display: none;">
-                    <div class="progress-bar">
-                        <div class="progress-fill" id="progressFill"></div>
+                <div class="canvas-container" id="canvasContainer">
+                    <div class="canvas-placeholder" id="canvasPlaceholder">
+                        <div class="placeholder-content">
+                            <span style="font-size: 48px;">🖼️</span>
+                            <h3>No Image Selected</h3>
+                            <p>Upload an image or PDF and click "Scan" to start OCR</p>
+                        </div>
                     </div>
-                    <p id="progressText">Scanning...</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="ocr-right-panel">
-            <div class="preview-header">
-                <h2>Preview & Edit</h2>
-                <div class="preview-controls">
-                    <button class="control-button" id="zoomInButton" title="Zoom In">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <circle cx="11" cy="11" r="8"></circle>
-                            <path d="M21 21l-4.35-4.35"></path>
-                            <line x1="11" y1="8" x2="11" y2="14"></line>
-                            <line x1="8" y1="11" x2="14" y2="11"></line>
-                        </svg>
-                    </button>
-                    <button class="control-button" id="zoomOutButton" title="Zoom Out">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <circle cx="11" cy="11" r="8"></circle>
-                            <path d="M21 21l-4.35-4.35"></path>
-                            <line x1="8" y1="11" x2="14" y2="11"></line>
-                        </svg>
-                    </button>
-                    <button class="control-button" id="resetButton" title="Reset">Reset</button>
-                </div>
-            </div>
-
-            <div class="preview-area" id="previewArea">
-                <div class="preview-empty" id="previewEmpty">
-                    <svg width="80" height="80" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-                        <circle cx="8.5" cy="8.5" r="1.5"></circle>
-                        <polyline points="21 15 16 10 5 21"></polyline>
-                    </svg>
-                    <p>No scanned documents yet</p>
-                    <p class="hint">Upload files and click Scan to start</p>
+                    <canvas id="ocrCanvas"></canvas>
+                    <div id="textBoxContainer"></div>
                 </div>
 
-                <div class="preview-content" id="previewContent" style="display: none;">
-                    <div class="canvas-container" id="canvasContainer">
-                        <canvas id="documentCanvas"></canvas>
-                        <div id="textBoxesContainer"></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="action-buttons">
-                <button class="apply-button" id="applyButton" disabled>
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                        <polyline points="20 6 9 17 4 12"></polyline>
-                    </svg>
-                    Apply
-                </button>
                 <div class="download-options" id="downloadOptions" style="display: none;">
-                    <button class="download-btn" id="downloadPDF">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                            <polyline points="7 10 12 15 17 10"></polyline>
-                            <line x1="12" y1="15" x2="12" y2="3"></line>
-                        </svg>
-                        Download PDF
-                    </button>
-                    <button class="download-btn" id="downloadPNG">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                            <polyline points="7 10 12 15 17 10"></polyline>
-                            <line x1="12" y1="15" x2="12" y2="3"></line>
-                        </svg>
-                        Download PNG
-                    </button>
+                    <h3>Select Download Format</h3>
+                    <button class="download-format-btn" onclick="downloadAs('pdf')">Download PDF</button>
+                    <button class="download-format-btn" onclick="downloadAs('jpg')">Download JPG</button>
+                    <button class="download-format-btn" onclick="downloadAs('png')">Download PNG</button>
+                    <button class="download-format-btn cancel-btn" onclick="hideDownloadOptions()">Cancel</button>
                 </div>
-                <button class="clear-button" id="clearButton">Clear</button>
             </div>
         </div>
-    </div>
+    </main>
 
-    <script src="ocr.js"></script>
     <script src="script.js"></script>
+    <script src="ocr.js"></script>
 </body>
 </html>
