--- a/Knowledge_Bases.html
+++ b/Knowledge_Bases.html
@@ -96,7 +96,7 @@
         </div>
 
         <div class="form-group">
-          <label for="kbCategory">Category</label>
+          <label for="kbCategory">Tag</label>
           <select id="kbCategory">
             <option value="general">General</option>
             <option value="technical">Technical</option>
