Ver 3.4  (remove ocr textbox icon)

--- a/ocr.html
+++ b/ocr.html
@@ -55,7 +55,7 @@
                 <div class="upload-section">
                     <input type="file" id="imageUpload" accept="image/*,application/pdf" multiple style="display: none;">
                     <button class="upload-btn" onclick="document.getElementById('imageUpload').click()">
-                        <span>📁</span> Upload Image/PDF
+                    Upload Image/PDF
                     </button>
                 </div>
                 
