Ver3.7 (updated ai chat label)

--- a/AI Chat.html
+++ b/AI Chat.html
@@ -48,7 +48,7 @@
           <div class="chat-actions">
             <button class="btn-secondary" onclick="clearChat()">Clear Chat</button>
             <button class="btn-secondary" onclick="exportChat()">Export</button>
-            Powered by Ricoh Hong Kong Limited
+            <label class="chat label" Powered by Ricoh Hong Kong Limited></label>
           </div>
         </div>
         <div class="chat-messages" id="chatMessages">
