--- a/ocr.html
+++ b/ocr.html
@@ -13,11 +13,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
-<section class="logo"><a href="index.html" style="cursor: pointer;"><img src="Ricoh_Logo.png" alt="Ricoh Logo" /></a>
+<section class="logo">
+    <button class="menu-toggle-btn" id="menuToggleBtn" onclick="toggleMenu()" title="Toggle Menu">
+        <span class="menu-toggle-icon">☰</span>
+    </button>
+    <a href="index.html" style="cursor: pointer;"><img src="Ricoh_Logo.png" alt="Ricoh Logo" /></a>
 </section>
 
 <body>
-    <header class="header">
+    <header class="header" id="mainHeader">
         <nav class="nav-menu">
             <button class="nav-btn" onclick="window.location.href='index.html'" data-tooltip="Dashboard"><img
                     src="dashboard.png" alt="Dashboard" width="30" /></button>
