--- a/ocr.html
+++ b/ocr.html
@@ -14,8 +14,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <section class="logo">
-    <button class="menu-toggle-btn" id="menuToggleBtn" onclick="toggleMenu()" title="Toggle Menu">
-        <span class="menu-toggle-icon">☰</span>
+    <button class="menu-toggle-btn" id="menuToggleBtn" onclick="toggleMenu()">
+        <span class="menu-toggle-icon"><img src="menu.png" style="width: 15px; height: auto;" /></span>
     </button>
     <a href="index.html" style="cursor: pointer;"><img src="Ricoh_Logo.png" alt="Ricoh Logo" /></a>
 </section>
