--- a/Knowledge_Bases.html
+++ b/Knowledge_Bases.html
@@ -12,8 +12,8 @@
 
 <body>
   <section class="logo">
-    <button class="menu-toggle-btn" id="menuToggleBtn" onclick="toggleMenu()" title="Toggle Menu">
-      <span class="menu-toggle-icon">☰</span>
+    <button class="menu-toggle-btn" id="menuToggleBtn" onclick="toggleMenu()">
+      <span class="menu-toggle-icon"><img src="menu.png" style="width: 15px; height: auto;" /></span>
     </button>
     <a href="index.html" style="cursor: pointer;"><img src="Ricoh_Logo.png" alt="Ricoh Logo" /></a>
   </section>
