Ver 4.3 (updated table path color & editdelete icon)

--- a/Knowledge_Bases.html
+++ b/Knowledge_Bases.html
@@ -119,7 +119,6 @@
             <input type="file" id="fileInput" multiple accept=".pdf,.doc,.docx,.txt,.xlsx,.xls,.ppt,.pptx"
               style="display: none;" />
             <div class="upload-placeholder" id="uploadPlaceholder">
-              <div class="upload-icon">📄</div>
               <div class="upload-text">Click or drag files here to upload</div>
               <div class="upload-subtext">Supported: PDF, DOC, DOCX, TXT, XLSX, XLS, PPT, PPTX</div>
             </div>
@@ -175,7 +174,7 @@
         <div style="margin-bottom: 20px;">
           <label style="font-weight: 600; display: block; margin-bottom: 5px;">Path:</label>
           <p style="margin: 0;"><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank"
-              text-decoration: none;" id="detailKbPath"></a></p>
+              style="text-decoration: none;" id="detailKbPath"></a></p>
         </div>
 
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 20px;">
