--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
             <tbody>
               <tr>
                 <td>Budget Review</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
-                    none;>SPCA MASTERCARD - 20000030 - Annual Budget Review
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000030 - Annual Budget Review
                     2025</a></td>
                 <td><span class="status-badge inprogress">In Progress</span></td>
                 <td>Workflow</td>
@@ -227,8 +226,7 @@
               </tr>
               <tr>
                 <td>Sales Report</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
-                    none;>SPCA MASTERCARD - 20000029 - Q4 Sales Report</a></td>
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000029 - Q4 Sales Report</a></td>
                 <td><span class="status-badge approve">Approve</span></td>
                 <td>Workflow</td>
                 <td>11/18/2025 10:20 AM</td>
@@ -242,8 +240,7 @@
               </tr>
               <tr>
                 <td>Training Program</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
-                    none;>SPCA MASTERCARD - 20000028 - Employee Training Program</a></td>
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000028 - Employee Training Program</a></td>
                 <td><span class="status-badge complete">Complete</span></td>
                 <td>Workflow</td>
                 <td>11/19/2025 4:00 PM</td>
@@ -257,7 +254,7 @@
               </tr>
               <tr>
                 <td>Infrastructure Upgrade</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000027 - IT Infrastructure
                     none;>SPCA MASTERCARD - 20000027 - IT Infrastructure
                     Upgrade</a></td>
                 <td><span class="status-badge inprogress">In Progress</span></td>
@@ -273,7 +270,7 @@
               </tr>
               <tr>
                 <td>Marketing Campaign</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000026 - Marketing Campaign
                     none;>SPCA MASTERCARD - 20000026 - Marketing Campaign
                     Analysis</a></td>
                 <td><span class="status-badge approve">Approve</span></td>
@@ -289,7 +286,7 @@
               </tr>
               <tr>
                 <td>Client Survey</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" tarr="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000025 - Client Feedback
                     none;>SPCA MASTERCARD - 20000025 - Client Feedback
                     Survey</a></td>
                 <td><span class="status-badge complete">Complete</span></td>
@@ -305,8 +302,7 @@
               </tr>
               <tr>
                 <td>Security Audit</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
-                    none;>SPCA MASTERCARD - 20000024 - Security Audit
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" tarrget="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000024 - Security Audit
                     Report</a></td>
                 <td><span class="status-badge pending">Pending</span></td>
                 <td>Workflow</td>
@@ -321,8 +317,7 @@
               </tr>
               <tr>
                 <td>Product Launch</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
-                    none;>SPCA MASTERCARD - 20000023 - Product Launch
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" tarrget="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000023 - Product Launch
                     Strategy</a></td>
                 <td><span class="status-badge inprogress">In Progress</span></td>
                 <td>Workflow</td>
@@ -337,8 +332,7 @@
               </tr>
               <tr>
                 <td>Contract Review</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
-                    none;>SPCA MASTERCARD - 20000022 - Vendor Contract
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000022 - Vendor Contract
                     Review</a></td>
                 <td><span class="status-badge approve">Approve</span></td>
                 <td>Workflow</td>
@@ -353,7 +347,7 @@
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000021 - Quarterly Financial
                     none;>SPCA MASTERCARD - 20000021 - Quarterly Financial
                     Statement</a></td>
                 <td><span class="status-badge complete">Complete</span></td>
@@ -369,7 +363,7 @@
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000020 - Customer Service
                     none;>SPCA MASTERCARD - 20000020 - Customer Service
                     Guidelines</a></td>
                 <td><span class="status-badge approve">Approve</span></td>
@@ -381,7 +375,7 @@
               </tr>
               <tr>
                 <td>Infrastructure Upgrade</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000019 - Data Migration
                     none;>SPCA MASTERCARD - 20000019 - Data Migration
                     Project</a></td>
                 <td><span class="status-badge inprogress">In Progress</span></td>
@@ -393,8 +387,7 @@
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
-                    none;>SPCA MASTERCARD - 20000018 - Employee Benefits
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000018 - Employee Benefits
                     Review</a></td>
                 <td><span class="status-badge complete">Complete</span></td>
                 <td>Workflow</td>
@@ -405,7 +398,7 @@
               </tr>
               <tr>
                 <td>Security Audit</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000017 - Compliance Audit
                     none;>SPCA MASTERCARD - 20000017 - Compliance Audit
                     Documentation</a></td>
                 <td><span class="status-badge pending">Pending</span></td>
@@ -417,7 +410,7 @@
               </tr>
               <tr>
                 <td>Marketing Campaign</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000016 - Social Media Strategy
                     none;>SPCA MASTERCARD - 20000016 - Social Media Strategy
                     Plan</a></td>
                 <td><span class="status-badge approve">Approve</span></td>
@@ -429,7 +422,7 @@
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000015 - Office Renovation
                     none;>SPCA MASTERCARD - 20000015 - Office Renovation
                     Proposal</a></td>
                 <td><span class="status-badge inprogress">In Progress</span></td>
@@ -441,7 +434,7 @@
               </tr>
               <tr>
                 <td>Contract Review</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000014 - Supplier Evaluation
                     none;>SPCA MASTERCARD - 20000014 - Supplier Evaluation
                     Report</a></td>
                 <td><span class="status-badge complete">Complete</span></td>
@@ -453,7 +446,7 @@
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000013 - Risk Assessment
                     none;>SPCA MASTERCARD - 20000013 - Risk Assessment
                     Analysis</a></td>
                 <td><span class="status-badge approve">Approve</span></td>
@@ -465,7 +458,7 @@
               </tr>
               <tr>
                 <td>Training Program</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000012 - Performance Review
                     none;>SPCA MASTERCARD - 20000012 - Performance Review
                     Template</a></td>
                 <td><span class="status-badge complete">Complete</span></td>
@@ -477,7 +470,7 @@
               </tr>
               <tr>
                 <td>Security Audit</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000011 - Network Security
                     none;>SPCA MASTERCARD - 20000011 - Network Security
                     Update</a></td>
                 <td><span class="status-badge inprogress">In Progress</span></td>
@@ -489,7 +482,7 @@
               </tr>
               <tr>
                 <td>Marketing Campaign</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000010 - Brand Identity
                     none;>SPCA MASTERCARD - 20000010 - Brand Identity
                     Guidelines</a></td>
                 <td><span class="status-badge approve">Approve</span></td>
@@ -501,7 +494,7 @@
               </tr>
               <tr>
                 <td>Sales Report</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000009 - Customer Retention
                     none;>SPCA MASTERCARD - 20000009 - Customer Retention
                     Strategy</a></td>
                 <td><span class="status-badge pending">Pending</span></td>
@@ -513,7 +506,7 @@
               </tr>
               <tr>
                 <td>Training Program</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000008 - Training Module
                     none;>SPCA MASTERCARD - 20000008 - Training Module
                     Development</a></td>
                 <td><span class="status-badge complete">Complete</span></td>
@@ -525,7 +518,7 @@
               </tr>
               <tr>
                 <td>Budget Review</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000007 - Budget Allocation
                     none;>SPCA MASTERCARD - 20000007 - Budget Allocation
                     Plan</a></td>
                 <td><span class="status-badge approve">Approve</span></td>
@@ -537,8 +530,7 @@
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
-                    none;>SPCA MASTERCARD - 20000006 - vfdwR6...</a></td>
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000006 - vfdwR6s </a>
                 <td><span class="status-badge pending">Pending</span></td>
                 <td>Workflow</td>
                 <td>11/3/2025 11:54 AM</td>
@@ -548,8 +540,7 @@
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
-                    none;>SPCA MASTERCARD - 20000005 - Application Form</a>
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000005 - Application Form</a> 
                 </td>
                 <td><span class="status-badge cancel">Cancel</span></td>
                 <td>Workflow</td>
@@ -560,7 +551,7 @@
               </tr>
               <tr>
                 <td>Budget Review</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000004 - Energise 1 - Costing
                     none;>SPCA MASTERCARD - 20000004 - Energise 1 - Costing
                     Phase</a></td>
                 <td><span class="status-badge complete">Complete</span></td>
@@ -572,7 +563,7 @@
               </tr>
               <tr>
                 <td>Infrastructure Upgrade</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000004 - New Invention &
                     none;>SPCA MASTERCARD - 20000004 - New Invention &
                     Facility</a></td>
                 <td><span class="status-badge approve">Approve</span></td>
@@ -584,7 +575,7 @@
               </tr>
               <tr>
                 <td>Contract Review</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000003 - Conditions of
                     none;>SPCA MASTERCARD - 20000003 - Conditions of
                     Contract</a></td>
                 <td><span class="status-badge cancel">Cancel</span></td>
@@ -596,7 +587,7 @@
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000002 -
                     none;>SPCA MASTERCARD - 20000002 -
                     Partners_Certific.Local</a></td>
                 <td><span class="status-badge pending">Pending</span></td>
@@ -608,7 +599,7 @@
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
-                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" text-decoration:
+                <td><a href="https://apps.ricohsolution.com.hk:1443/laserfiche/#?id=1" target="_blank" style="color: #0066cc; text-decoration: none;">SPCA MASTERCARD - 20000001 - Reallocation_Loan
                     none;>SPCA MASTERCARD - 20000001 - Reallocation_Loan
                     Acquisition...</a></td>
                 <td><span class="status-badge approve">Approve</span></td>
