Ver 4.5 (updated pie chart status %)

--- a/Knowledge_Bases_Details.html
+++ b/Knowledge_Bases_Details.html
@@ -107,7 +107,7 @@
           </div>
 
           <div class="kb-search-bar">
-            <input type="search" id="fileSearch" placeholder="🔍 Search files..." />
+            <input type="search" id="fileSearch" placeholder="Search files..." />
           </div>
 
           <div class="files-grid" id="filesGrid">
