Ver 4.9 (updated pie chart expand button)

--- a/index.html
+++ b/index.html
@@ -76,35 +76,35 @@
           <div class="chart-card">
             <select class="process-selector-dropdown" data-chart-index="0">
             </select>
-            <button class="expand-btn" data-chart="chartProcess0" title="Expand">⛶</button>
+            <button class="expand-btn" data-chart="chartProcess0" title="Expand"><img src="expand.png" alt="Expand" width="20" /></button>
             <h3 id="chartTitle0">Loading...</h3>
             <div class="chart-wrap"><canvas id="chartProcess0"></canvas></div>
           </div>
           <div class="chart-card">
             <select class="process-selector-dropdown" data-chart-index="1">
             </select>
-            <button class="expand-btn" data-chart="chartProcess1" title="Expand">⛶</button>
+            <button class="expand-btn" data-chart="chartProcess1" title="Expand"><img src="expand.png" alt="Expand" width="20" /></button>
             <h3 id="chartTitle1">Loading...</h3>
             <div class="chart-wrap"><canvas id="chartProcess1"></canvas></div>
           </div>
           <div class="chart-card">
             <select class="process-selector-dropdown" data-chart-index="2">
             </select>
-            <button class="expand-btn" data-chart="chartProcess2" title="Expand">⛶</button>
+            <button class="expand-btn" data-chart="chartProcess2" title="Expand"><img src="expand.png" alt="Expand" width="20" /></button>
             <h3 id="chartTitle2">Loading...</h3>
             <div class="chart-wrap"><canvas id="chartProcess2"></canvas></div>
           </div>
           <div class="chart-card">
             <select class="process-selector-dropdown" data-chart-index="3">
             </select>
-            <button class="expand-btn" data-chart="chartProcess3" title="Expand">⛶</button>
+            <button class="expand-btn" data-chart="chartProcess3" title="Expand"><img src="expand.png" alt="Expand" width="20" /></button>
             <h3 id="chartTitle3">Loading...</h3>
             <div class="chart-wrap"><canvas id="chartProcess3"></canvas></div>
           </div>
         </div>
 
         <div class="line-chart-container">
-          <button class="expand-btn" data-chart="lineChart" title="Expand">⛶</button>
+          <button class="expand-btn" data-chart="lineChart" title="Expand"><img src="expand.png" alt="Expand" width="20" /></button>
           <h3>Overall Status Trend</h3>
           <div class="line-chart-wrap"><canvas id="lineChart" height="140"></canvas></div>
         </div>
