Ver 5.4 (updated menu bar icon)

--- a/Knowledge_Bases_Details.html
+++ b/Knowledge_Bases_Details.html
@@ -35,7 +35,7 @@
           alt="Report" width="30" /></button>
     </nav>
     <button class="theme-toggle" id="themeToggle" onclick="toggleDarkMode()" data-tooltip="Toggle Light / Dark Mode">
-      <span class="theme-icon">🌙</span>
+      <span class="theme-icon"><img src="assets/crescent-moon.png" alt="Toggle Theme" width="20"/></span>
     </button>
     <div class="user-menu" data-tooltip="Profile"><img src="assets/user.png" alt="User Profile" width="30" /></div>
     <button class="nav-btn" onclick="window.location.href='#'" data-tooltip="Logout">Logout</button>
