Ver 5.5 (updated menu bar icon)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           alt="OCR" width="30" /></button>
       <button class="nav-btn" data-tooltip="Configuration"><img src="assets/setting.png" alt="Configuration"
           width="30" /></button>
-      <button class="nav-btn" onclick="window.location.href='#'" data-tooltip="Report"><img src="assets/report.png"
+      <button class="nav-btn" onclick="window.location.href='#'" data-tooltip="Report"><img src="assets/file.png"
           alt="Report" width="30" /></button>
     </nav>
     <button class="theme-toggle" id="themeToggle" onclick="toggleDarkMode()" data-tooltip="Toggle Light / Dark Mode">
